2012-11-01  Eric Seidel  <eric@webkit.org>

        Add Glenn Adams to the Contributor list
        https://bugs.webkit.org/show_bug.cgi?id=100982

        Reviewed by Adam Barth.

        I CC him enough on bugs it would help me to have him listed here.

        * Scripts/webkitpy/common/config/committers.py:

2012-11-01  Jer Noble  <jer.noble@apple.com>

        Add Python-LLDB support for WTF::Vector types.
        https://bugs.webkit.org/show_bug.cgi?id=100980

        Reviewed by Anders Carlsson.

        Add a synthetic child provider for WTF::Vector types.

        * lldb/lldb_webkit.py:
        (__lldb_init_module): Add both the summary and synthetic providers for WTF::Vector
        (WTFVector_SummaryProvider): Wrapper around WTFVectorProvider
        (WTFVectorProvider):
        (WTFVectorProvider.__init__):
        (WTFVectorProvider.num_children): Return m_size+2 children to account for synthesized children.
        (WTFVectorProvider.get_child_index): Synthesize child indexes for each entry in the Vector.
        (WTFVectorProvider.get_child_at_index): Synthesize children for each entry in the Vector.
        (WTFVectorProvider.update): Retrieve state from the underlying Vector.
        (WTFVectorProvider.has_children): Vectors always have children.

2012-11-01  Zoltan Horvath  <zoltan@webkit.org>

        Remove PageLoad directory entry from PerformanceTests pattern_map
        https://bugs.webkit.org/show_bug.cgi?id=100989

        Reviewed by Ryosuke Niwa.

        Since we removed PageLoad directory from PerformanceTests we don't need this entry in pattern_map.

        * Scripts/webkitpy/performance_tests/perftest.py:
        (PerfTestFactory):

2012-11-01  Jer Noble  <jer.noble@apple.com>

        Add LLDB-Python scripts to support WebKit data types.
        https://bugs.webkit.org/show_bug.cgi?id=100898

        Reviewed by Anders Carlsson.

        Add Summary providers for common WebKit string types.

        * lldb/lldb_webkit.py: Added.